# sensoreval

./: .gitmodules  CMakeLists.txt  Cargo.toml  main.cpp  orientation.cpp  orientation.h  videohud.cpp  videohud.h
.github/workflows/: rust.yml
bmp2-sys/: Cargo.toml  build.rs
client/: .eslintrc.json  package.json  webpack.config.js
client/src/: App.js
dataviewer/: CMakeLists.txt  main.cpp  qml.qrc  sensordata.h  videohudrenderer.cpp
dataviewer/qml/: main.qml
dataviewer/qmlnative/: orientation.cpp  orientation.h  qmlvideohud.cpp  qmlvideohud.h
docs/: .gitignore  booster.tex  references.md  seesaw.tex
hudrenderer/: CMakeLists.txt  main.c
include/: sensordata.h  sensoreval.h
kalman/: Cargo.toml
kalman/src/: discretization.rs  error.rs  imm.rs  kalman.rs  lib.rs  sigma_points.rs  ukf.rs  unscented_transform.rs
lib/: CMakeLists.txt  config.c  data.c  math.c  plot.c  readdata.c  render.c
lib/hudmodehandlers/: booster.c  swingboat.c
lib/include/: sensoreval.h
lib/include/sensoreval/: config.h  data.h  math.h  plot.h  readdata.h  render.h
math/: Cargo.toml
math/src/: error.rs  lib.rs  multivariate.rs
qml/: main.qml
scripts/: west-commands.yml
scripts/west_commands/: se.py
sensoreval/: Cargo.toml  build.rs
sensoreval/dataviewer/: CMakeLists.txt
sensoreval/dataviewer/qmlnative/: orientation.h  qmlvideohud.h
sensoreval/include/: sensoreval.h
sensoreval/src/: config.rs  data.rs  datareader.rs  error.rs  lib.rs  plotutils.rs  render.rs
sensoreval/src/hudrenderers/: generic.rs  pendulum.rs
sensoreval/src/python/: blender_common.py  blender_mannequin.py
sensoreval/src/render/: mod.rs
sensoreval/src/simulator/: pendulum.rs
sensoreval_graphics/: Cargo.toml
sensoreval_graphics/src/: assets.rs  booster_2d.rs  double_pendulum_2d.rs  error.rs  lib.rs  pendulum_2d.rs  pendulum_nessy.rs  utils.rs
sensoreval_gui/: Cargo.toml  build.rs  wrapper.h
sensoreval_gui/native/: CMakeLists.txt  main.cpp
sensoreval_gui/native/include/: global.h
sensoreval_gui/native/qml/: main.qml
sensoreval_gui/native/qmlnative/: orientation.cpp  orientation.h  qmlvideohud.cpp  qmlvideohud.h
sensoreval_gui/src/: error.rs  lib.rs
sensoreval_macros/: Cargo.toml
sensoreval_macros/src/: lib.rs
sensoreval_psim/: Cargo.toml
sensoreval_psim/src/: lib.rs  run.rs  utils.rs
sensoreval_psim/src/models/: booster.rs  double_pendulum.rs  mod.rs  pendulum.rs
sensoreval_psim_macros/: Cargo.toml
sensoreval_utils/: Cargo.toml
sensoreval_utils/src/: drain_filter.rs  error.rs  intoitermap.rs  lib.rs  plot.rs  python.rs  timedarray.rs
sensoreval_utils/src/js/: plot.js
src/: CMakeLists.txt  capi.rs  config.rs  data.rs  datareader.rs  drain_filter.rs  error.rs  ffmpeg.rs  lib.rs  main.cpp  main.rs  math.rs  plot.rs  python.rs  render.rs  sensordata.cpp  usfsdevice.cpp  usfsdevice.h  videohudrenderer.cpp  videohudrenderer.h
src/devices/: CMakeLists.txt  usfsdevice.cpp  usfsdevice.h
src/hudhandlers/: swingboat.rs
src/hudrenderers/: generic.rs  mod.rs  pendulum.rs  swingboat.rs
src/kalman/: discretization.rs  mod.rs  sigma_points.rs  ukf.rs  unscented_transform.rs
src/math/: mod.rs
src/python/: blender_common.py  blender_mannequin.py  plot_time_data.py
src/qml/: main.qml
src/qmlnative/: orientation.cpp
src/render/: mod.rs  native.cpp  native.h  render.rs  utils.rs
src/simulator/: pendulum.rs
src/test/: mod.rs
testlib/: Cargo.toml
testlib/src/: lib.rs
tools/: magcal  plotdata
tools/booster_analysis/: Cargo.toml
tools/booster_analysis/src/: main.rs
