[package]
name = "sensoreval"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "0.6"
serde_ignored = "0.1"
bincode = "1.2"
toml = "0.5"
cairo-sys-rs = "0.9"
pango = "0.8"
pangocairo = "0.9"
regex = "1.3"
cairo-rs = { version = "0.8", features = ["png"] }
ndarray = {version = "0.13", features = ["serde"] }
ndarray-linalg = "0.12"
rand = "0.7"
eom = { git = "https://github.com/M1cha/eom", branch = "master" }
clap = "2.33"
num-traits = "0.2"
blas-src = { version = "*", features = ["intel-mkl"] }
lapack-src = { version = "*", features = ["intel-mkl"] }

[dev-dependencies]
assert_approx_eq = "1.1"

[profile.dev]
opt-level = 1
