[package]
name = "kalman"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[dependencies]
math = { path = "../math" }
ndarray = "0.14"
ndarray-linalg = { version = "0.13" }
num-traits = "*"
thiserror = "1.0"

[dev-dependencies]
rand = "^0.8"
testlib = { path = "../testlib" }
lapack-src = { version = "*", features = ["openblas"] }