[package]
name = "kalman"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2021"

[dependencies]
math = { path = "../math" }
ndarray = "0.15"
ndarray-linalg = { version = "0.16" }
num-traits = "*"
thiserror = "1.0"

[dev-dependencies]
lapack-src = { version = "*", features = ["openblas"] }
rand = "^0.8"
testlib = { path = "../testlib" }
