[package]
name = "math"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = "0.14"
ndarray-linalg = { version = "0.13" }
num-traits = "*"
thiserror = "1.0"

[dev-dependencies]
testlib = { path = "../testlib" }
blas-src = { version = "0.6", features = ["openblas"] }
approx = "0.5"