[package]
name = "math"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2021"

[dependencies]
ndarray = "0.15"
ndarray-linalg = { version = "0.16" }
num-traits = "*"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
blas-src = { version = "0.8", features = ["openblas"] }
testlib = { path = "../testlib" }
