[package]
name = "sensoreval"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2021"

[dependencies]

approx = "0.5"
bincode = "1.3"
blas-src = { version = "0.6", features = ["openblas"] }
cairo-rs = "0.9"
clap = "2.33"
enum_dispatch = "0.3"
eom = { git = "https://github.com/M1cha/eom", branch = "master" }
half = { version = "1.6", features = ["serde"] }
kalman = { path = "../kalman" }
lapack-src = { version = "*", features = ["openblas"] }
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", version = "2.51" }
math = { path = "../math" }
nalgebra = "0.27"
ndarray = { version = "0.14", features = ["serde"] }
ndarray-linalg = { version = "0.13" }
num-traits = "0.2"
openblas-src = { version = "*", features = ["static"] }
pango = "0.9"
rand = "0.8"
regex = "1.5"
sensoreval_graphics = { path = "../sensoreval_graphics" }
sensoreval_gui = { path = "../sensoreval_gui" }
sensoreval_psim = { path = "../sensoreval_psim" }
sensoreval_utils = { path = "../sensoreval_utils" }
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "0.6"
serde_ignored = "0.1"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
