[package]
name = "sensoreval"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2021"

[dependencies]

approx = "0.5"
bincode = "1.3"
blas-src = { version = "0.8", features = ["openblas"] }
cairo-rs = "0.16"
clap = "4.1"
enum_dispatch = "0.3"
eom = { git = "https://github.com/M1cha/eom", branch = "main" }
half = { version = "2.2", features = ["serde"] }
kalman = { path = "../kalman" }
lapack-src = { version = "*", features = ["openblas"] }
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", version = "2.55" }
math = { path = "../math" }
nalgebra = "0.32"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = { version = "0.16" }
num-traits = "0.2"
openblas-src = { version = "*", features = ["static"] }
pango = "0.16"
rand = "0.8"
regex = "1.7"
sensoreval_graphics = { path = "../sensoreval_graphics" }
sensoreval_gui = { path = "../sensoreval_gui" }
sensoreval_psim = { path = "../sensoreval_psim" }
sensoreval_utils = { path = "../sensoreval_utils" }
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.1"
serde_ignored = "0.1"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.7"
