[package]
name = "sensoreval_graphics"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[dependencies]
cairo-rs = { version = "0.9", features = ["png"] }
math = { path = "../math" }
gio = "*"
glib = "*"
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", version="2.51" }
pango = "0.9"
pangocairo = "0.10"
thiserror = "1.0"