[package]
name = "sensoreval_gui"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2021"

[dependencies]
cairo-rs = "0.16"
cairo-sys-rs = "0.16"
num-traits = "0.2"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.63"
cmake = "0.1"
pkg-config = "0.3"
walkdir = "2.3"
