[package]
name = "sensoreval_psim"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2021"

[dependencies]

cairo-rs = "0.16"
clap = "4.1"
enum_dispatch = "0.3"
eom = { git = "https://github.com/M1cha/eom", branch = "main" }
lapack-src = { version = "*", features = ["openblas"] }
math = { path = "../math" }
nalgebra = "0.32"
ndarray = { version = "0.15" }
ndarray-linalg = { version = "0.16" }
pango = "0.16"
sensoreval_graphics = { path = "../sensoreval_graphics" }
sensoreval_gui = { path = "../sensoreval_gui" }
sensoreval_utils = { path = "../sensoreval_utils" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
