[package]
name = "sensoreval_utils"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2021"

[dependencies]

ndarray = "0.15"
plotly-types = { git = "https://github.com/M1cha/plotly-types-rs", branch = "master" }
sensoreval_macros = { path = "../sensoreval_macros" }
serde = "1.0"
serde-pickle = "1.1"
thiserror = "1.0"
